# vision_defect_detection

./: .gitignore  MANIFEST.in  README.md  requirements.txt  setup.cfg  tk_app.py
artifacts/models/: anillo-T1.joblib  anillo-T3.joblib  dobleanillo-T1.joblib  dobleanillo-T4.joblib  gancho-T2.joblib  report.json
scripts/: evaluate_confusion.py  train_models.py
src/vision_defect_detection/: __init__.py  api.py  data.py  features.py  inference.py  modeling.py
src/vision_defect_detection/resources/models/: anillo-T2.joblib  dobleanillo-T3.joblib  gancho-T3.joblib
