[metadata]
name = vision-defect-detection
version = 0.1.0
description = Sistema de clasificación BUENO/MALO para piezas de herrería
long_description = file: README.md
long_description_content_type = text/markdown
author = Vision Team
license = Proprietary

[options]
packages = find:
package_dir =
    = src
include_package_data = True
python_requires = >=3.10
install_requires =
    numpy
    pandas
    scikit-learn
    opencv-python
    scikit-image
    matplotlib
    Pillow

[options.packages.find]
where = src

[options.package_data]
vision_defect_detection = resources/models/*.joblib, resources/models/*.json
vision_defect_detection.resources.models = *.joblib, *.json
